ignore this just testing if the commit works

--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Login / Sign Up Form UI</title>
+    <title>Login / Sign Up Form</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
