Added Reservation and implementef new  Feature... Work still in process

--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="right-navbar">
-          <a href="#" class="bookNow">BOOK NOW</a>
+          <a href="/src/Frontend/resevation.html" class="bookNow">BOOK NOW</a>
           <a
             href="javascript:void(0);"
             class="hamburger"
@@ -161,7 +161,7 @@
             <div class="plan-content">
               <h4>Classic Room</h4>
               <div class="price">
-                <p><span>$150</span> per night</p>
+                <p><span>$100</span> per night</p>
               </div>
               <div class="features">
                 <p>Free WiFi</p>
@@ -179,7 +179,7 @@
             <div class="plan-content">
               <h4>Luxury Room</h4>
               <div class="price">
-                <p><span>$200</span> per night</p>
+                <p><span>$250</span> per night</p>
               </div>
               <div class="features">
                 <p>Free WiFi</p>
@@ -197,7 +197,7 @@
             <div class="plan-content">
               <h4>Modern Room</h4>
               <div class="price">
-                <p><span>$175</span> per night</p>
+                <p><span>$150</span> per night</p>
               </div>
               <div class="features">
                 <p>Free WiFi</p>
