--- a/src/Frontend/header.html
+++ b/src/Frontend/header.html
@@ -32,16 +32,16 @@
             <a href="#">SOH</a>
           </div>
           <div class="navbar-option" id="navbar-option">
-            <a href="#main-section">Home</a>
-            <a href="#about-section">About</a>
+            <a href="/src/Frontend/index.html">Home</a>
+            <!-- <a href="#about-section">About</a>
             <a href="#services">Services</a>
             <a href="#pricing">Pricing</a>
-            <a href="#blog-and-news">Blog</a>
+            <a href="#blog-and-news">Blog</a> -->
           </div>
         </div>
         <div class="right-navbar">
           <!-- <button onclick="logout()">LOGOUT</button> -->
-          <a href="#" onclick="logout()">Logout</a>
+          <a href="/src/Frontend/login.html" onclick="logout()">Logout</a>
           <a
             href="javascript:void(0);"
             class="hamburger"
