--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -170,7 +170,7 @@
                 <p>2 peoples in room</p>
               </div>
               <div class="select-package">
-                <a href="#">Select Package</a>
+                <a href="/src/Frontend/resevation.html">Select Package</a>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
                 <p>4 peoples in room</p>
               </div>
               <div class="select-package">
-                <a href="#">Select Package</a>
+                <a href="/src/Frontend/resevation.html">Select Package</a>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
                 <p>2 peoples in room</p>
               </div>
               <div class="select-package">
-                <a href="#">Select Package</a>
+                <a href="/src/Frontend/resevation.html">Select Package</a>
               </div>
             </div>
           </div>
