--- a/src/Frontend/sign-up.html
+++ b/src/Frontend/sign-up.html
@@ -331,7 +331,7 @@
           </div>
           <div class="form-group">
             <img src="img/lock.png" alt="" />
-            <input type="password" placeholder="Re_Password" />
+            <input type="password" placeholder="Confirm Password" />
           </div>
           <div class="form-group">
             <button type="submit">Sign Up</button>
