Installed template engine for serving static html files

--- a/src/Frontend/header.html
+++ b/src/Frontend/header.html
@@ -32,7 +32,7 @@
             <a href="#">SOH</a>
           </div>
           <div class="navbar-option" id="navbar-option">
-            <a href="/src/Frontend/index.html">Home</a>
+            <a href="/">Home</a>
             <!-- <a href="#about-section">About</a>
             <a href="#services">Services</a>
             <a href="#pricing">Pricing</a>
@@ -41,7 +41,8 @@
         </div>
         <div class="right-navbar">
           <!-- <button onclick="logout()">LOGOUT</button> -->
-          <a href="/src/Frontend/login.html" onclick="logout()">Logout</a>
+           <!-- TODO: test this function -->
+          <a href="/login" onclick="logout()">Logout</a>
           <a
             href="javascript:void(0);"
             class="hamburger"
