--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="right-navbar">
-          <a href="/src/Frontend/resevation.html" class="bookNow">BOOK NOW</a>
+          <a href="/reservation" class="bookNow">BOOK NOW</a>
           <a
             href="javascript:void(0);"
             class="hamburger"
@@ -170,7 +170,7 @@
                 <p>2 peoples in room</p>
               </div>
               <div class="select-package">
-                <a href="/src/Frontend/resevation.html">Select Package</a>
+                <a href="/reservation">Select Package</a>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
                 <p>4 peoples in room</p>
               </div>
               <div class="select-package">
-                <a href="/src/Frontend/resevation.html">Select Package</a>
+                <a href="/reservation">Select Package</a>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
                 <p>2 peoples in room</p>
               </div>
               <div class="select-package">
-                <a href="/src/Frontend/resevation.html">Select Package</a>
+                <a href="/reservation">Select Package</a>
               </div>
             </div>
           </div>
