--- a/src/Frontend/forgot-password.html
+++ b/src/Frontend/forgot-password.html
@@ -35,8 +35,8 @@
             <button type="submit">Submit</button>
           </div>
           <div class="form-group">
-            <a href="login.html">Login</a>
-            <a href="sign-up.html" class="right-link">Sign Up</a>
+            <a href="/login">Login</a>
+            <a href="/register" class="right-link">Sign Up</a>
           </div>
         </form>
       </div>
