--- a/src/Frontend/login.html
+++ b/src/Frontend/login.html
@@ -44,8 +44,8 @@
             <button type="submit">Sign in</button>
           </div>
           <div class="form-group">
-            <a href="forgot-password.html">Forgot Password?</a>
-            <a href="sign-up.html" class="right-link">Sign Up</a>
+            <a href="/forgotpassword">Forgot Password?</a>
+            <a href="/register" class="right-link">Sign Up</a>
           </div>
         </form>
       </div>
