--- a/src/Frontend/sign-up.html
+++ b/src/Frontend/sign-up.html
@@ -26,10 +26,10 @@
     <div class="wrapper">
       <div class="form-holder">
         <h2>Create New account</h2>
-        <form action="" class="form">
+        <form id="signup" action="/users/register" class="form">
           <div class="form-group">
             <img src="img/user.png" alt="" />
-            <input type="text" placeholder="User name" />
+            <input name="username" type="text" placeholder="User name" />
           </div>
           <div class="form-group">
             <img src="img/user.png" alt="" />
@@ -327,7 +327,7 @@
           </div>
           <div class="form-group">
             <img src="img/lock.png" alt="" />
-            <input type="password" placeholder="Password" />
+            <input name="password" type="password" placeholder="Password" />
           </div>
           <div class="form-group">
             <img src="img/lock.png" alt="" />
@@ -335,12 +335,50 @@
           </div>
           <div class="form-group">
             <button type="submit">Sign Up</button>
-          </div>
+          </div> 
           <div class="form-group">
-            <a href="login.html" class="right-link">Sign in</a>
+            <a href="/login" class="right-link">Sign in</a>
           </div>
         </form>
       </div>
     </div>
+    <!-- <script>
+      let form;
+      let formData;
+      document.addEventListener('DOMContentLoaded', () => {
+        form = document.getElementById('signup');
+        console.log('content loaded')
+    
+        form.addEventListener('submit', async (event) => {
+          event.preventDefault();
+
+          // Create a plain JavaScript object with the form data
+          const requestBody = {
+              username: 'john_doe',
+              email: 'john@example.com',
+              password: 'securepassword'
+          };
+
+          // Send the data as JSON in the body of the request
+          const response = await fetch('http://127.0.0.1:8000/users/register', {
+              method: 'POST',
+              headers: {
+                  'Content-Type': 'application/json',  // Set the content type to JSON
+              },
+              body: JSON.stringify(requestBody),  // Convert the object to a JSON string
+              // You can remove 'mode: "no-cors"' if you are handling CORS server-side
+              mode: 'no-cors'
+          });
+
+          // Handle the response
+          if (response.ok) {
+              const result = await response.json();
+              console.log('Response:', result);
+          } else {
+              console.error('Error:', response.status, response.statusText);
+          }
+      });
+    });
+    </script> -->
   </body>
 </html>
