--- a/src/Frontend/login.html
+++ b/src/Frontend/login.html
@@ -23,32 +23,69 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="form-holder">
-        <img src="img/user.png" class="logo" alt="" />
-        <h2>Login</h2>
-        <form action="" class="form">
-          <div class="form-group">
-            <img src="img/user.png" alt="" />
-            <input type="text" placeholder="User name" />
-          </div>
-          <div class="form-group">
-            <img src="img/lock.png" alt="" />
-            <input type="password" placeholder="Password" />
-          </div>
-          <div class="form-group" class="checkbox-container">
-            <input type="checkbox" id="rememberMe" />
-            <label for="rememberMe">Remember me</label>
-          </div>
-          <div class="form-group">
-            <button type="submit">Sign in</button>
-          </div>
-          <div class="form-group">
-            <a href="/forgotpassword">Forgot Password?</a>
-            <a href="/register" class="right-link">Sign Up</a>
-          </div>
-        </form>
+    <form action="" method="post">
+      <div class="wrapper">
+        <div class="form-holder">
+          <img src="img/user.png" class="logo" alt="" />
+          <h2>Login</h2>
+          <form action="" class="form">
+            <div class="form-group">
+              <img src="img/user.png" alt="" />
+              <input type="text" id="username" name="username" placeholder="User name" />
+            </div>
+            <div class="form-group">
+              <img src="img/lock.png" alt="" />
+              <input type="password" id="password" name="password" placeholder="Password" />
+            </div>
+            <div class="form-group" class="checkbox-container">
+              <input type="checkbox" id="rememberMe" />
+              <label for="rememberMe">Remember me</label>
+            </div>
+            <div class="form-group">
+              <button type="button" onclick="login()">Sign in</button>
+            </div>
+            <div class="form-group">
+              <a href="/forgotpassword">Forgot Password?</a>
+              <a href="/register" class="right-link">Sign Up</a>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
+    </form>
   </body>
+  <script>
+    
+    async function login() {
+      const data = {
+        username: document.getElementById("username").value,
+        password: document.getElementById("password").value
+      };
+
+      const queryParams = new URLSearchParams(data).toString();
+      const url = `/user/login?${queryParams}`;
+
+      try {
+        const response = await fetch(url, {
+          method: 'POST' // Sending query parameters with POST
+        });
+
+        if (!response.ok) {
+          console.error(`Login failed with status ${response.status}`);
+          return;
+        }
+
+        const result = await response.json();
+        console.log(`Response from ${url}:`, result);
+
+        // Redirect to the homepage
+        window.location.href = '/';
+      } catch (error) {
+        console.error(`Error posting to ${url}:`, error);
+      }
+    }
+
+
+
+
+  </script>
 </html>
